Fix scrolling on shift shape

--- a/src/styles/menu/manageShiftShapeMenu.scss
+++ b/src/styles/menu/manageShiftShapeMenu.scss
@@ -1,4 +1,6 @@
 #shapes {
+  max-height: 600px;
+  overflow-y: auto;
   #shapes-header {
     justify-content: left;
     margin-bottom: 5px;
